--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
 <body>
     <h1>Hello, Developers</h1>
     <h1>World!!!</h1>
+    <h2>is full of</h2>
+    <h2>Imaginary things</h2>
+    <img src = "https://www.shutterstock.com/image-vector/web-development-coding-programming-responsive-600w-1449924503.jpg">
 </body>
 </html>
